package unq.po2.tpFinal;

import unq.po2.tpFinal.domain.Category;

public interface Categories{
	public void add(Category category);
}