package unq.po2.tpFinal;

public class City {
	private String name;
	
	public City(String name) {
		this.name = name;
	}
	public String getName() {
		return name;
	}

}
