package unq.po2.tpFinal;

public class Country {
	private String name;	
	
	public Country(String name) {
		this.name = name;
	}

	public String getName() {
		return name;
	}

}
