package unq.po2.tpFinal;

public interface EmailSender {
	public void sendEmail(String to, String body);	
}