package unq.po2.tpFinal;

import unq.po2.tpFinal.domain.HousingType;

public interface HousingTypes{
	public void add(HousingType housingType);
}