package unq.po2.tpFinal;

public enum PaymentMethod {
	Cash,
	DebitCard,
	CreditCard
}
