package unq.po2.tpFinal;

public interface Ranker {
	void rank(Ranking ranking);
}