package unq.po2.tpFinal;

import java.util.List;

public interface SearchFilter {

	List<Housing> filter(List<Housing> housingList);
	
}
