package unq.po2.tpFinal;

import java.util.List;

import unq.po2.tpFinal.interfaces.Service;

public interface Services{
	public void add(Service service);
	public List<Service> getAll();
}