package unq.po2.tpFinal;
import java.time.LocalDateTime;
import java.util.ArrayList;
import java.util.List;

public class Tenant extends User implements Rankeable, Ranker {
	private List<Ranking> rankings;
	private double cancelationFee;
	
	public Tenant(String fullName, String email, String phoneNumber, LocalDateTime createdOn) {
		super(fullName, email, phoneNumber, createdOn);
		rankings = new ArrayList<Ranking>();
		this.cancelationFee = 0;
	}	

	@Override
	public void addRanking(Ranking ranking) {
		rankings.add(ranking);
	}

	@Override
	public List<Ranking> getRankings() {
		return rankings;
	}

	@Override
	public void rank(Ranking ranking) {
		ranking.getRanked().addRanking(ranking);
	}
	
	public void addCancelationFee(double cancelationFee) {
		this.cancelationFee += cancelationFee;
	}
	
	public void book(Housing housing, DateRange range, PaymentMethod paymentMethod) {
		Booking booking = new Booking(housing, this, range, paymentMethod);
		housing.getOwner().accept(booking);
	}
	
}